# Programmazione-e-calcolo-scientifico

./: Esercitazione0.txt
Esercitazione_1/: CMakeLists.txt
Esercitazione_1/Build_es1/: media_temperature.cpp  printargs.cpp
Esercitazione_10/: CMakeLists.txt
Esercitazione_10/Build_es10/: gradiente_coniugato.cpp
Esercitazione_2/: CMakeLists.txt
Esercitazione_2/Build_es2/: CMakeCache.txt  Makefile  cmake_install.cmake  es_2  es_2.cpp  esempio.cpp
Esercitazione_3/: CMakeLists.txt
Esercitazione_3/Build_es3/: main.cpp  rational.hpp
Esercitazione_4/: CMakeLists.txt
Esercitazione_4/Build_es4/: is_sorted.hpp  measure_sorts.cpp  sort.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
Esercitazione_5/: CMakeLists.txt  grafico_tempi_finale.m  grafico_tempi_iniziale.m  osservazioni.txt
Esercitazione_5/Build_es5/: is_sorted.hpp  measure_sorts.cpp  measure_sorts_new.cpp  sort.hpp  sort_new.hpp  test_mergesort.cpp  test_quicksort.cpp  timecounter.h
Esercitazione_6/: CMakeLists.txt
Esercitazione_6/Build_es6/: main.cpp  unidirected_edge.hpp  unidirected_graph.hpp
Esercitazione_9/: CMakeLists.txt
Esercitazione_9/Build_es9/: dijkstra.hpp  fifo.hpp  graph_visit.hpp  lifo.hpp  main.cpp  recursive_dfs.hpp  unidirected_graph.hpp  weighted_graph.hpp
